--- a/beijing/pages/fangfang/index.html
+++ b/beijing/pages/fangfang/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <span class="music"></span>
     <div id="display"></div>
     <div class='heart3d'>
       <div class='rib1'></div>
