--- a/beijing/pages/girl/index.html
+++ b/beijing/pages/girl/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>献给亲爱的芳芳</title>
+    <title>献给亲爱的茗</title>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
@@ -48,12 +48,12 @@
       <div class='rib35'></div>
       <div class='rib36'></div>
       <div class="per">
-        <div class="img"><img width="50" height="50" src="images/1.png" /></div>
-        <div class="img"><img width="50" height="50" src="images/1.png" /></div>
-        <div class="img"><img width="50" height="50" src="images/1.png" /></div>
-        <div class="img"><img width="50" height="50" src="images/1.png" /></div>
-        <div class="img"><img width="50" height="50" src="images/1.png" /></div>
-        <div class="img"><img width="50" height="50" src="images/1.png" /></div>
+        <div class="img"><img width="50" height="50" src="images/bm.jpg" /></div>
+        <div class="img"><img width="50" height="50" src="images/bm.jpg" /></div>
+        <div class="img"><img width="50" height="50" src="images/bm.jpg" /></div>
+        <div class="img"><img width="50" height="50" src="images/bm.jpg" /></div>
+        <div class="img"><img width="50" height="50" src="images/bm.jpg" /></div>
+        <div class="img"><img width="50" height="50" src="images/bm.jpg" /></div>
       </div>
     </div>
     <div style="display:none">
@@ -65,7 +65,7 @@
   </body>
   <script>
     var i =0;
-    var str ="芳： if我曾未遇见你 如同故事类未加载到虚拟机 在茫茫人海中循环遍历 直到邂逅true的唯一  if我日渐倾慕你 循环嵌套也裹不住思念满溢 慌乱心跳抛出的异常信息 会捕捉到灵魂的秘密  if我沉迷依恋你 穷极八种数据类型也难言表心意 偶尔读取到你眼神里银河的轨迹 该用什么编码解析  if我能再遇见到你 情愿这线程在此刻沉睡不起 未执行的代码是否继续走下去 请不要匆匆return别离  北方的春 2019-02-22";
+    var str ="茗： if我曾未遇见你 如同故事类未加载到虚拟机 在茫茫人海中循环遍历 直到邂逅true的唯一  if我日渐倾慕你 循环嵌套也裹不住思念满溢 慌乱心跳抛出的异常信息 会捕捉到灵魂的秘密  if我沉迷依恋你 穷极八种数据类型也难言表心意 偶尔读取到你眼神里银河的轨迹 该用什么编码解析  if我能再遇见到你 情愿这线程在此刻沉睡不起 未执行的代码是否继续走下去 请不要匆匆return别离  思念的春 2018-05-09";
     window.onload = function() {
       typing()
     }
