--- a/beijing/pages/选中文本截图/index.html
+++ b/beijing/pages/选中文本截图/index.html
@@ -36,11 +36,13 @@
       margin-left: 3px;
     }
     .dialog{
+      position: fixed;
       width: 800px;
       height: 300px;
       top: 100px;
-      margin-left: 200px;
-      overflow-x: hidden;
+      margin-left: 50%;
+      left: -400px;
+      overflow-x: scroll;
       overflow-y: scroll;
       border: 4px solid #ccc;
     }
@@ -50,15 +52,85 @@
   </style>
 </head>
 <body>
-  <button onclick="print()">canvas绘图</button>
+  <button onclick="print()">生成截图</button>
   <button onclick="convertCanvasToImage()">canvas转成图片</button>
+  <button onclick="listen4Rectangle()">矩形工具</button>
+  <button onclick="listen4Text()">写入文字</button>
+  <button onclick="cancel()">撤回</button>
+
   <div id="content">
-    在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-    从定义中我们提炼出几个关键字：组件、结构、关系；
-    组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-    结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-    关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-    架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    <p>
+      在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
+      从定义中我们提炼出几个关键字：组件、结构、关系；
+      组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
+      结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
+      关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
+      从定义中我们提炼出几个关键字：组件、结构、关系；
+      组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
+      结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
+      关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
+      从定义中我们提炼出几个关键字：组件、结构、关系；
+      组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
+      结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
+      关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
+    <p>
+      架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
+    </p>
   </div>
 
   <div id="tip" class="select-widFeedback hide" style="color:yellow; position: absolute; z-index: 3;" onclick="setStyle(`.dialog{display: block;}`)">
@@ -66,24 +138,27 @@
     <div class="select-widFeedback-text" data-spm-anchor-id="a2c4g.11186623.0.i54.37466d72FONjUY">文档反馈</div>
   </div>
   <div id="dialog" class="dialog hide"></div>
+  
 
   <div id="imgBox"></div>
 </body>
 <script>
 var globalcanvas
+var ctx
+var imgData = [] // 记录每一步操作内容
 var selectObj = document.getElementById('content')
 var canvasBox = document.getElementById('dialog')
 var imgBox = document.getElementById('imgBox')
 var startPosition
 var endPosition
-select(selectObj, showTip);
+listenSelectContent()
 listenDocumentClick()
-listenClickPosition(canvasBox)
+listen4Rectangle()
 /*
-* content 选中文字事件
+* 监听选择文旦内容
 */
-function select(o, fn){
-  o.onmouseup = function(e){
+function listenSelectContent(){
+  selectObj.onmouseup = function(e){
     var event = window.event || e;
     var position = {'x':e.clientX+10,'y':e.clientY+14}
     startPosition = {'x':e.clientX,'y':e.clientY}
@@ -94,45 +169,48 @@ function select(o, fn){
         var endIndex=target.selectionEnd;
         if(staIndex!=endIndex){
           var sText=target.value.substring(staIndex,endIndex);
-          fn(sText,target, position);
+          showTip(sText,target, position);
         }
     } else {
       //获取选中文字
       var sText = document.selection == undefined ? document.getSelection().toString():document.selection.createRange().text;
       if (sText != "") {
         //将参数传入回调函数fn
-        fn(sText, target, position);
+        showTip(sText, target, position);
       }
     }
   }
-  o.onmousedown = function(e){ //1清空dialog内容 2隐藏dialog弹窗
+  selectObj.onmousedown = function(e){ //1清空dialog内容 2隐藏dialog弹窗
     var endPosition = {'x':e.clientX,'y':e.clientY}
     canvasBox.innerHTML = ''
     setStyle(`.dialog{display: none;}`)
   }
 }
 
+
 /**
- * 监听画布鼠标时间
+ * 矩形工具-监听画布鼠标时间
  */ 
-function listenClickPosition(o) {
-  o.onmousedown  = function(e){
-    startPosition = {'x':e.clientX-200,'y':e.clientY-100}
+function listen4Rectangle() {
+  canvasBox.onmousedown  = function(e){
+    startPosition = {'x':e.clientX-570,'y':e.clientY-110}
     console.log('startPosition ', startPosition)
   }
-  o.onmouseup = function(e){
-    endPosition = {'x':e.clientX-200,'y':e.clientY-100}
+  canvasBox.onmouseup = function(e){
+    endPosition = {'x':e.clientX-550,'y':e.clientY-100}
     console.log('endPosition ', endPosition)
     print(startPosition,endPosition)
   }
-  // o.onmousemover = function(e) {
-  //   var currPosition = {'x':e.clientX-200,'y':e.clientY-100}
-  //   console.log('currPosition ', currPosition)
-  //   if (startPosition) { // 已按住鼠标
-      
-  //     print(startPosition,currPosition)
-  //   }
-  // }
+}
+
+/**
+ * 选择插入文字-监听画布鼠标事件
+ */
+ function listen4Text(){
+  canvasBox.onmousedown  = function(e){}
+  canvasBox.onmouseup = function(e){
+    fillText('你好', e.clientX, e.clientY)
+  }
 }
 
 /**
@@ -151,6 +229,8 @@ function getCanvasFromHtml(){
   html2canvas(document.body).then(function(canvas) {
     globalcanvas = canvas
     canvasBox.appendChild(canvas)
+    ctx = globalcanvas.getContext("2d");
+    canvas_copy()
   });
 }
 
@@ -206,14 +286,49 @@ function setStyle(css){
   head.appendChild(style);
 }
 
+
+
 /**
- * 
+ * 绘制矩形区域
  */
 function print(s,e){
-  var ctx = globalcanvas.getContext("2d");
   ctx.fillStyle = 'rgba(192, 80, 77, 0.5)';;
   ctx.fillRect(s.x,s.y,e.x-s.x,e.y-s.y);
   //ctx.fillRect(10,10,e.x,e.y);
+  canvas_copy()
+}
+
+/**
+ * 绘制文字
+ */ 
+function fillText(text,x,y){
+  ctx.font = 'bold 16px arial';
+  ctx.fillStyle = 'red'
+  ctx.fillText(text, x, y);
+  canvas_copy()
+}
+
+/**
+ * 将每一步记录复制存储起来
+ */
+function canvas_copy(){
+  var width = ctx.canvas.width;
+  var height = ctx.canvas.height;
+  console.log('width, height ', width, height)
+  imgData.push(ctx.getImageData(0, 0, width, height))
+}
+
+/**
+ * 撤回 取出imgData记录的上一张
+ */ 
+function cancel(){
+  console.log(imgData)
+  if (imgData.length>1) {
+    imgData.pop()
+    ctx.putImageData(imgData[imgData.length-1],0,0);
+  } else {
+    console.log('已经是第一步了')
+  }
 }
 
 
